--- a/.github/workflows/deploy-service.yml
+++ b/.github/workflows/deploy-service.yml
@@ -9,13 +9,17 @@ on:
       dockerfile:
         required: true
         type: string
-      app_runner_arn:
-        required: true
-        type: string
       tests_command:
         required: false
         default: ""
         type: string
+    secrets:
+      AWS_REGION:
+        required: true
+      AWS_ACCOUNT_ID:
+        required: true
+      APP_RUNNER_SERVICE_ARN:
+        required: true
 
 jobs:
   deploy:
@@ -25,26 +29,26 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Rodar testes
+      - name: Run tests
         if: ${{ inputs.tests_command != '' }}
         run: ${{ inputs.tests_command }}
 
-      - name: Definir TAG com hash do commit
+      - name: Define TAG with commit hash
         id: vars
         run: echo "TAG=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
-      - name: Login no ECR
+      - name: Login to ECR
         run: |
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
           | docker login --username AWS \
             --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
 
-      - name: Build Docker
+      - name: Build Docker image
         run: |
           docker build -f ${{ inputs.dockerfile }} \
             -t ${{ inputs.service_name }}:${{ steps.vars.outputs.TAG }} .
 
-      - name: Tag + Push para o ECR
+      - name: Tag + Push to ECR
         run: |
           docker tag ${{ inputs.service_name }}:${{ steps.vars.outputs.TAG }} \
             ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ inputs.service_name }}:${{ steps.vars.outputs.TAG }}
@@ -55,5 +59,5 @@ jobs:
       - name: Deploy App Runner
         run: |
           aws apprunner update-service \
-          --service-arn "${{ inputs.app_runner_arn }}" \
+          --service-arn "${{ secrets.APP_RUNNER_SERVICE_ARN }}" \
           --source-configuration "ImageRepository={ImageIdentifier=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ inputs.service_name }}:${{ steps.vars.outputs.TAG }},ImageRepositoryType=ECR}"
