--- a/.github/workflows/deploy-fargate.yml
+++ b/.github/workflows/deploy-fargate.yml
@@ -81,7 +81,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    environment: production
     steps:
       - name: Checkout
         uses: actions/checkout@v4
