--- a/.github/workflows/deploy-fargate.yml
+++ b/.github/workflows/deploy-fargate.yml
@@ -211,7 +211,8 @@ jobs:
             ENV_VARS=$(echo $ENV_VARS | jq '. += [{"name":"COMPANY_ID_FIELD","value":"${{ secrets.COMPANY_ID_FIELD }}"}]')
           fi
           if [ -n "${{ secrets.ENABLED_USERS }}" ]; then
-            ENV_VARS=$(echo $ENV_VARS | jq '. += [{"name":"ENABLED_USERS","value":"${{ secrets.ENABLED_USERS }}"}]')
+            ESCAPED_ENABLED_USERS=$(printf '%s' "${{ secrets.ENABLED_USERS }}" | jq -R .)
+            ENV_VARS=$(echo $ENV_VARS | jq '. += [{"name":"ENABLED_USERS","value":"${{ secrets.ESCAPED_ENABLED_USERS }}"}]')
           fi
           
           echo "ENV_VARS<<EOF" >> $GITHUB_OUTPUT
