--- a/.github/workflows/deploy-fargate.yml
+++ b/.github/workflows/deploy-fargate.yml
@@ -210,10 +210,13 @@ jobs:
           if [ -n "${{ secrets.COMPANY_ID_FIELD }}" ]; then
             ENV_VARS=$(echo $ENV_VARS | jq '. += [{"name":"COMPANY_ID_FIELD","value":"${{ secrets.COMPANY_ID_FIELD }}"}]')
           fi
+
           if [ -n "${{ secrets.ENABLED_USERS }}" ]; then
-            ENV_VARS=$(echo $ENV_VARS | jq '. += [{"name":"ENABLED_USERS","value":"${{ secrets.ENABLED_USERS }}"}]')
+            ESCAPED_JSON=$(jq -Rs . <<< "${{ secrets.ENABLED_USERS }}")
+            ENV_VARS=$(echo "$ENV_VARS" | jq --arg v "$ESCAPED_JSON" \
+              '. += [{"name": "ENABLED_USERS", "value": $v}]')
           fi
-          
+            
           echo "ENV_VARS<<EOF" >> $GITHUB_OUTPUT
           echo "$ENV_VARS" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
