--- a/.github/workflows/deploy-fargate.yml
+++ b/.github/workflows/deploy-fargate.yml
@@ -173,7 +173,6 @@ jobs:
       - name: Prepare environment variables
         id: env_vars
         run: |
-          # Create the JSON array directly with printf + GitHub’s own substitution
           printf '%s\n' '[
             {"name":"SQL_HOST","value":"${{ secrets.SQL_HOST }}"},
             {"name":"SQL_PORT","value":"${{ secrets.SQL_PORT }}"},
@@ -189,16 +188,9 @@ jobs:
             {"name":"ENABLED_USERS","value":${{ secrets.ENABLED_USERS }}}
           ]' > env.json
 
-          # Remove empty entries (secrets that were not set)
-          jq 'map(select(.value != "" and .value != null))' env.json > final.json
+          jq -c 'map(select(.value != "" and .value != null))' env.json > final.json
 
-          # Output for the next step
           echo "ENV_VARS=$(cat final.json)" >> $GITHUB_OUTPUT
-
-          # Optional: see it in the log so you know it worked
-          echo "Final ECS environment variables:"
-          cat final.json | jq .
-      
 
       - name: Get IAM role ARNs
         id: roles
