--- a/.github/workflows/deploy-fargate.yml
+++ b/.github/workflows/deploy-fargate.yml
@@ -226,6 +226,7 @@ jobs:
       - name: Register ECS task definition
         id: taskdef
         run: |
+          # Build the task definition in one clean jq call
           TASK_DEF=$(jq -n \
             --arg family "${{ inputs.service_name }}-task" \
             --arg taskRoleArn "${{ steps.roles.outputs.TASK_ROLE_ARN }}" \
@@ -235,7 +236,7 @@ jobs:
             --arg image "${{ env.IMAGE_URI }}" \
             --arg serviceName "${{ inputs.service_name }}" \
             --arg region "${{ secrets.AWS_REGION }}" \
-            --arg environment '${{ steps.env_vars.outputs.ENV_VARS }}' \   # ← changed from --argjson to --arg
+            --arg envVars '${{ steps.env_vars.outputs.ENV_VARS }}' \
             '{
               family: $family,
               taskRoleArn: $taskRoleArn,
@@ -248,11 +249,12 @@ jobs:
                 name: $serviceName,
                 image: $image,
                 essential: true,
-                environment: ($environment | fromjson),   # ← this converts the string back to proper array
+                ,
+                environment: ($envVars | fromjson),
                 logConfiguration: {
                   logDriver: "awslogs",
                   options: {
-                    "awslogs-group": ("/ecs/" + $serviceName),
+                    "awslogs-group": "/ecs/" + $serviceName,
                     "awslogs-region": $region,
                     "awslogs-stream-prefix": "ecs",
                     "awslogs-create-group": "true"
@@ -261,13 +263,13 @@ jobs:
               }]
             }')
 
-          echo "$TASK_DEF" | jq '.' > taskdef.json
-
-          TASK_DEF_ARN=$(aws ecs register-task-definition \
+          # Save and register
+          echo "$TASK_DEF" > taskdef.json
+          aws ecs register-task-definition \
             --cli-input-json file://taskdef.json \
-            --region ${{ secrets.AWS_REGION }} \
-            --query 'taskDefinition.taskDefinitionArn' \
-            --output text)
+            --region ${{ secrets.AWS_REGION }} > register-output.json
+
+          TASK_DEF_ARN=$(jq -r '.taskDefinition.taskDefinitionArn' register-output.json)
 
           echo "TASK_DEF_ARN=$TASK_DEF_ARN" >> $GITHUB_OUTPUT
           echo "Registered task definition: $TASK_DEF_ARN"
